--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <H1>PORTIFÓLIO</H1>
+            <H1>MEU PORTIFÓLIO</H1>
             
                 <nav>
                     <ul>
@@ -24,9 +24,7 @@
     </header>
     <h2 class="nomeCurriculo">LÊNISSON ASSUNÇÃO</h2>
     <p>Iniciando como Dev. front-end em evolução <br>constante. Atualmente focado em HTML, CSS e <br> JavaScript. Transformando ideias em realidade <br> com linhas de código.</p>
-    <button class="btn">DOWNLOAD CURRÍCULO</button>
-
-
+   <a href="curriculo.pdf" target="_blank"><button class="btn">Currículo</button></a>
 </div>
 
 </body>
