--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 </nav>
                 
     </header>
-    <h2 class="nomeCurriculo">LÊNISSON ASSUNÇÃO</h2>
-    <p>Iniciando como Dev. front-end em evolução <br>constante. Atualmente focado em HTML, CSS e <br> JavaScript. Transformando ideias em realidade <br> com linhas de código.</p>
-   <a href="curriculo.pdf" target="_blank"><button class="btn">Currículo</button></a>
+    <h2 class="nomeCurriculo"><strong>LÊNISSON ASSUNÇÃO</strong></h2>
+    <p>Desenvolvedor independente. Atualmente focado em JavaScript<br> HTML, CSS. Transformando ideias em realidade <br> com linhas de código.</p>
+   <a href="curriculo.docx" target="_blank"><button class="btn">Download currículo</button></a>
 </div>
 
 </body>
