--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <h2 class="nomeCurriculo"><strong>LÊNISSON ASSUNÇÃO</strong></h2>
     <p>Desenvolvedor independente. Atualmente focado em JavaScript<br> HTML, CSS. Transformando ideias em realidade <br> com linhas de código.</p>
-   <a href="curriculo.docx" target="_blank"><button class="btn">Download currículo</button></a>
+   <a href="curriculo.docx" download><button class="btn">Download currículo</button></a>
 </div>
 
 </body>
