--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <H1>MEU PORTIFÓLIO</H1>
+            <H1>MEU PORTFÓLIO</H1>
             
                 <nav>
                     <ul>
