--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <nav>
                 <ul>
                     <a href="#" onclick="mostrarSecao('inicio')"><li>INÍCIO</li></a>
-                    <a href="#"><li>SOBRE</li></a>
+                    <a href="SOBRE.HTML"><li>SOBRE</li></a>
                     <!-- Abrirá em uma nova aba -->
                     <a href="projetos.html" target="_blank"><li>PROJETOS</li></a>
                     <a href="contatos.html" target="_blank"><li>CONTATOS</li></a>
@@ -23,7 +23,7 @@
                 
     </header>
     <h2 class="nomeCurriculo"><strong>LÊNISSON ASSUNÇÃO</strong></h2>
-    <p>Desenvolvedor independente. Atualmente focado em JavaScript<br> HTML, CSS. Transformando ideias em realidade <br> com linhas de código.</p>
+    <p class="descricao_pagina">Desenvolvedor independente. Atualmente focado em JavaScript<br> HTML, CSS. Transformando ideias em realidade <br> com linhas de código.</p>
    <a href="curriculo.docx" download><button class="btn">Download currículo</button></a>
 </div>
 
