--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <nav>
                 <ul>
                     <a href="#" onclick="mostrarSecao('inicio')"><li>INÍCIO</li></a>
-                    <a href="SOBRE.HTML"><li>SOBRE</li></a>
+                    <a href="#"><li>SOBRE</li></a>
                     <!-- Abrirá em uma nova aba -->
-                    <a href="projetos.html" target="_blank"><li>PROJETOS</li></a>
+                    <a href="PROJETOS.html" target="_blank"><li>PROJETOS</li></a>
                     <a href="contatos.html" target="_blank"><li>CONTATOS</li></a>
                 </ul>
             </nav>
