--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
     </header>
     <h2 class="nomeCurriculo"><strong>LÊNISSON ASSUNÇÃO</strong></h2>
-    <p class="descricao_pagina">Desenvolvedor independente. Atualmente focado em JavaScript<br> HTML, CSS. Transformando ideias em realidade <br> com linhas de código.</p>
+    <p class="descricao_pagina">Desenvolvendo em JavaScript<br> usando outras ferramentas; HTML, CSS. <br>Atualmente cursando BOOTCAMP <br>através do programa Santander 2025 - Ciência de Dados com Python</p>
    <a href="curriculo.docx" download><button class="btn">Download currículo</button></a>
 </div>
 
