--- a/SOBRE.HTML
+++ b/SOBRE.HTML
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<H1>MEU PORTIFÓLIO</H1>
+<H1>MEU PORTFOLIO</H1>
             
                 <nav>
                 <ul>
