--- a/PROJETOS.html
+++ b/PROJETOS.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-            <H1>MEU PORTIFÓLIO</H1>
+            <H1>MEU PORTFOLIO</H1>
             
                 <nav>
                 <ul>
