--- a/contatos.html
+++ b/contatos.html
@@ -22,7 +22,10 @@
                 
     </header>
     
-    <p id="paragrafo_Email">E-mail: Lenisson.tj@gmail.com</p>
-    <p id="paragrafo_Whatsapp">Whatsapp: (79) 9 98339210</p>
+    <h3>Deixe um cometário</h3>
+    <label id="labelComentarioNome">Nome:</label> <input type="text" id="nomeComentario"> <br>
+    <label id="labelcomentarioEmail">E-mail</label> 
+    <input type="email" id="emailComentario"> <br>
+    Comentário <textarea name="areaNome" rows="10" cols="50" id="areaNome">Em fase de DESENVOLVIMENTO.</textarea>
 </body>
 </html>
