--- a/contatos.html
+++ b/contatos.html
@@ -21,11 +21,13 @@
             </nav>
                 
     </header>
-    
+    <div id="formularioComentario">
     <h3>Deixe um cometário</h3>
     <label id="labelComentarioNome">Nome:</label> <input type="text" id="nomeComentario"> <br>
     <label id="labelcomentarioEmail">E-mail</label> 
-    <input type="email" id="emailComentario"> <br>
-    Comentário <textarea name="areaNome" rows="10" cols="50" id="areaNome">Em fase de DESENVOLVIMENTO.</textarea>
+    <input type="email" id="emailComentario"> 
+    <br>
+    <textarea name="areaNome" rows="10" cols="50" id="areaNome">Em fase de DESENVOLVIMENTO.</textarea>
+    </div>
 </body>
 </html>
