--- a/index.html
+++ b/index.html
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt_BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jewelry Elegance</title>
-    <link rel="stylesheet" href="index.css">
+    <title>PORTIFÓLIO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="background">
+    <div class="container">
         <header>
-            <div class="logo">
-                <img src="imagens/Logo.png" alt="logo">
-            </div>
-            <ul class="links">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Menu</a></li>
-                <li><a href="#">Produtos</a></li>
-                <li><a href="#">Contato</a></li>
-                <li><a href="#">Blog</a></li>
-            </ul>
-            <div class="C-Icone">
-                <span class="icone"><ion-icon name="search-outline"></ion-icon></span>
-                <span class="icone"><ion-icon name="cart-outline"></ion-icon></span>
-            </div>
-        </header>
-        <hr>
-        <div class="C-title">
-            <div class="title">
-                <h1>ELEGÂNCIA </h1>
-                <h1>ESTÁ NOS MÍNIMOS DETALHES</h1>
-            </div>
-            <p>Nossa felicidade e vê-los felizes.</p>
-            <button>Compre agora</button>
-        </div>
-    </div>
-   
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+            <H1>MEU PORTFOLIO</H1>
+            
+                <nav>
+                <ul>
+                    <a href="#" onclick="mostrarSecao('inicio')"><li>INÍCIO</li></a>
+                    <a href="#"><li>SOBRE</li></a>
+                    <!-- Abrirá em uma nova aba -->
+                    <a href="PROJETOS.html" target="_blank"><li>PROJETOS</li></a>
+                    <a href="contatos.html" target="_blank"><li>CONTATOS</li></a>
+                </ul>
+            </nav>
+                
+    </header>
+    <h2 class="nomeCurriculo"><strong>LÊNISSON ASSUNÇÃO</strong></h2>
+    <p class="descricao_pagina">Desenvolvendo em JavaScript<br> usando outras ferramentas; HTML, CSS. <br>Atualmente cursando BOOTCAMP <br>através do programa Santander 2025 - Ciência de Dados com Python</p>
+   <a href="curriculo.docx" download><button class="btn">Download currículo</button></a>
+</div>
+
 </body>
 </html>
