--- a/contatos.html
+++ b/contatos.html
@@ -24,10 +24,12 @@
     <div id="formularioComentario">
     <h3>Deixe um cometário</h3>
     <label id="labelComentarioNome">Nome:</label> <input type="text" id="nomeComentario"> <br>
-    <label id="labelcomentarioEmail">E-mail</label> 
-    <input type="email" id="emailComentario"> 
+    <label id="labelcomentarioEmail" >E-mail:</label> 
+    <input type="email" id="emailComentario" placeholder="@gmail.com"> 
     <br>
-    <textarea name="areaNome" rows="10" cols="50" id="areaNome">Em fase de DESENVOLVIMENTO.</textarea>
+    <textarea name="areaNome" rows="10" cols="50" id="areaNome" style="resize: none;" disabled>Em fase de DESENVOLVIMENTO.</textarea> 
+    <br>
+    <input type="submit" value="Enviar" id="btnEnviarContatos">
     </div>
 </body>
 </html>
